// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. group of topics 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#ff007f",
            "borderRadius": 3,
            "bottom": 5,
            "left": 0,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 3,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "width": 236,
          }
        }
      >
        <View
          style={
            Object {
              "height": 16,
              "opacity": 1,
              "position": "absolute",
              "right": 5,
              "top": 10,
              "width": 16,
              "zIndex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "-45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 16,
              "lineHeight": 18,
              "paddingHorizontal": 30,
              "paddingRight": 35,
              "paddingVertical": 20,
              "textAlign": "left",
            }
          }
        >
          <Text>
            Tap a topic to see more of our coverage
          </Text>
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 8,
              "borderColor": "#ff007f",
              "borderLeftColor": "transparent",
              "borderLeftWidth": 12,
              "borderRadius": 3,
              "borderRightColor": "transparent",
              "borderRightWidth": 12,
              "borderStyle": "solid",
              "bottom": -7,
              "left": 20,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": -3,
                "width": -3,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "rotate": "180deg",
                },
              ],
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "#ff007f",
            "borderRadius": 2,
            "borderWidth": 2,
            "padding": 9,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 13,
              "position": "relative",
              "top": 3.5,
            }
          }
        >
          Football
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`2. group of topics at large scale 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#ff007f",
            "borderRadius": 3,
            "bottom": 5,
            "left": 0,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 3,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "width": 236,
          }
        }
      >
        <View
          style={
            Object {
              "height": 16,
              "opacity": 1,
              "position": "absolute",
              "right": 5,
              "top": 10,
              "width": 16,
              "zIndex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "-45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 16,
              "lineHeight": 18,
              "paddingHorizontal": 30,
              "paddingRight": 35,
              "paddingVertical": 20,
              "textAlign": "left",
            }
          }
        >
          <Text>
            Tap a topic to see more of our coverage
          </Text>
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 8,
              "borderColor": "#ff007f",
              "borderLeftColor": "transparent",
              "borderLeftWidth": 12,
              "borderRadius": 3,
              "borderRightColor": "transparent",
              "borderRightWidth": 12,
              "borderStyle": "solid",
              "bottom": -7,
              "left": 20,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": -3,
                "width": -3,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "rotate": "180deg",
                },
              ],
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "#ff007f",
            "borderRadius": 2,
            "borderWidth": 2,
            "padding": 9,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 14,
              "lineHeight": 16,
              "position": "relative",
              "top": 3.5,
            }
          }
        >
          Football
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`3. group of topics at xlarge scale 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
      "marginBottom": 10,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#ff007f",
            "borderRadius": 3,
            "bottom": 5,
            "left": 0,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 3,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "width": 236,
          }
        }
      >
        <View
          style={
            Object {
              "height": 16,
              "opacity": 1,
              "position": "absolute",
              "right": 5,
              "top": 10,
              "width": 16,
              "zIndex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "-45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 16,
              "lineHeight": 18,
              "paddingHorizontal": 30,
              "paddingRight": 35,
              "paddingVertical": 20,
              "textAlign": "left",
            }
          }
        >
          <Text>
            Tap a topic to see more of our coverage
          </Text>
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 8,
              "borderColor": "#ff007f",
              "borderLeftColor": "transparent",
              "borderLeftWidth": 12,
              "borderRadius": 3,
              "borderRightColor": "transparent",
              "borderRightWidth": 12,
              "borderStyle": "solid",
              "bottom": -7,
              "left": 20,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": -3,
                "width": -3,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "rotate": "180deg",
                },
              ],
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "#ff007f",
            "borderRadius": 2,
            "borderWidth": 2,
            "padding": 9,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 15,
              "lineHeight": 17,
              "position": "relative",
              "top": 3.5,
            }
          }
        >
          Football
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`4. article topic with style 1`] = `
<View
  style={
    Object {
      "marginRight": 10,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRadius": 2,
          "borderWidth": 1,
          "padding": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 17,
            "lineHeight": 20,
            "position": "relative",
            "top": 3.5,
          }
        }
      >
        Test
      </Text>
    </View>
  </View>
</View>
`;

exports[`5. article topic with no additional style 1`] = `
<View
  style={
    Object {
      "marginRight": 10,
      "marginTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRadius": 2,
          "borderWidth": 1,
          "padding": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#696969",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 13,
            "position": "relative",
            "top": 3.5,
          }
        }
      >
        Test
      </Text>
    </View>
  </View>
</View>
`;
